--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:networkSecurityConfig="@xml/network_config">
+        <activity android:name=".activity.BaseActivity"/>
+        <activity android:name=".activity.MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".activity.ThirdActivity">
             <intent-filter tools:ignore="AppLinkUrlError">
                 <action android:name="android.intent.action.VIEW" />
@@ -28,32 +36,12 @@
                 <category android:name="com.example.kotlindemo.MY_CATEGORY" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.FirstActivity">
+        <activity android:name=".activity.FirstActivity"/>
+        <activity android:name=".retrofit.RetrofitActivity"/>
+        <activity android:name=".activity.MaterialDesignActivity"/>
+        <activity android:name=".activity.MotionActivity"/>
+        <activity android:name=".activity.ConstraintActivity"/>
 
-        </activity>
-
-        <activity android:name=".retrofit.RetrofitActivity">
-
-
-        </activity>
-
-        <activity android:name=".activity.MaterialDesignActivity">
-
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
-
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
-
-        </activity>
-
-        <activity android:name=".activity.MotionActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
     </application>
 
 </manifest>
