--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <application
         android:name=".application.MyApplication"
         android:allowBackup="true"
-        android:icon="@drawable/ic_menu"
+        android:icon="@drawable/ic_launcher_round"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
@@ -41,6 +41,7 @@
         <activity android:name=".activity.MaterialDesignActivity"/>
         <activity android:name=".activity.MotionActivity"/>
         <activity android:name=".activity.ConstraintActivity"/>
+        <activity android:name=".jetpack.paging3.PagingActivity"/>
 
     </application>
 
