--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,15 +15,21 @@
         android:networkSecurityConfig="@xml/network_config">
         <activity android:name=".activity.BaseActivity"/>
         <activity android:name=".activity.MainActivity">
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
+        </activity>
+        <activity android:name=".retrofit.RetrofitActivity"/>
+        <activity android:name=".activity.MaterialDesignActivity"/>
+        <activity android:name=".activity.MotionActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".retrofit.RetrofitActivity"/>
-        <activity android:name=".activity.MaterialDesignActivity"/>
-        <activity android:name=".activity.MotionActivity"/>
         <activity android:name=".activity.ConstraintActivity"/>
         <activity android:name=".jetpack.paging3.PagingActivity"/>
         <activity android:name=".activity.ViewPager2Activity"/>
