--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     implementation 'androidx.work:work-runtime:2.5.0-alpha01'
     implementation 'androidx.room:room-runtime:2.2.5'
     implementation 'androidx.paging:paging-runtime:3.0.0-beta01'
+    implementation 'androidx.startup:startup-runtime:1.1.0'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     kapt "androidx.room:room-compiler:2.2.5"
     implementation 'com.google.android.material:material:1.4.0'
