--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:networkSecurityConfig="@xml/network_config"
         tools:targetApi="n">
         <activity android:name=".activity.BaseActivity"/>
-        <activity android:name=".activity.MainActivity">
+        <activity android:name=".activity.MainActivity"
+                  android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -36,8 +37,17 @@
         <activity android:name=".study.motion.MotionKeyCycleActivity"/>
         <activity android:name=".study.motion.MotionCustomActivity"/>
         <activity android:name=".study.motion.MotionWithAppBarActivity"/>
-        <activity android:name=".study.motion.MotionWithLottieActivity"/>
-        <activity android:name=".study.motion.MotionWithRecycleViewActivity"/>
+
+        <!-- 定义Startup Provider参数 -->
+        <provider
+            android:name="androidx.startup.InitializationProvider"
+            android:authorities="${applicationId}.androidx-startup"
+            android:exported="false"
+            tools:node="merge">
+            <meta-data
+                android:name="com.example.kotlindemo.jetpack.startup.SampleInitializer"
+                android:value="android.startup"/>
+        </provider>
 
     </application>
 
