--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,7 @@
         <activity android:name=".study.motion.MotionKeyCycleActivity"/>
         <activity android:name=".study.motion.MotionCustomActivity"/>
         <activity android:name=".study.motion.MotionWithAppBarActivity"/>
+        <activity android:name=".activity.MarkActivity"/>
 
         <!-- 定义Startup Provider参数 -->
         <provider
