--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,9 @@
 buildscript {
     ext {
-        compose_version = '1.0.4'
-        kotlin_version = '1.6.0'
+        kotlin_version = '1.6.10'
+        compose_version = '1.1.1'
+        coroutines_version = '1.6.0'
+        accompanist_version = '0.23.1'
     }
     repositories {
         google()
@@ -9,7 +11,7 @@ buildscript {
         maven { url "https://jitpack.io" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.2'
+        classpath 'com.android.tools.build:gradle:7.1.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
