--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,7 @@
         <activity android:name=".study.motion.MotionCustomActivity"/>
         <activity android:name=".study.motion.MotionWithAppBarActivity"/>
         <activity android:name=".activity.MarkActivity"/>
+        <activity android:name=".task.mutildelivery.DeliveryActivity"/>
 
         <!-- 定义Startup Provider参数 -->
         <provider
