--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,8 @@ plugins {
     id 'kotlin-kapt'
 }
 
+apply from: "../config.gradle"
+
 android {
     compileSdkVersion 33
     buildToolsVersion "33.0.1"
@@ -79,9 +81,13 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.14.2'
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
+    implementation 'com.airbnb.android:lottie:5.2.0'
 
     implementation 'de.hdodenhof:circleimageview:3.1.0'
-    implementation 'com.zhaopin.zpm:module_common_widget:1.0.7'
+    implementation 'com.zhaopin.zpm:module_common_widget:1.3.30'
+    implementation 'com.zhaopin.zpm:module_common_util:1.1.45'
+    implementation 'com.zhaopin.zpm:module_list:1.2.2'
+    implementation 'com.zhaopin.zpm:module_mvvm_base:2.1.8'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
