--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,7 @@
         <activity android:name=".activity.MarkActivity"/>
         <activity android:name=".task.mutildelivery.DeliveryActivity"/>
         <activity android:name=".task.appbar.AppBarActivity"/>
+        <activity android:name=".activity.ZLLinkageActivity"/>
 
         <!-- 定义Startup Provider参数 -->
         <provider
