--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,7 +74,7 @@ dependencies {
     kapt "androidx.room:room-compiler:2.4.2"
 
     implementation 'com.google.code.gson:gson:2.10'
-    implementation 'com.google.android.material:material:1.7.0'
+    implementation 'com.google.android.material:material:1.9.0'
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
@@ -84,10 +84,11 @@ dependencies {
     implementation 'com.airbnb.android:lottie:5.2.0'
 
     implementation 'de.hdodenhof:circleimageview:3.1.0'
-    implementation 'com.zhaopin.zpm:module_common_widget:1.3.30'
+    implementation 'com.zhaopin.zpm:module_common_widget:1.3.40'
     implementation 'com.zhaopin.zpm:module_common_util:1.1.45'
     implementation 'com.zhaopin.zpm:module_list:1.2.2'
     implementation 'com.zhaopin.zpm:module_mvvm_base:2.1.8'
+    implementation 'com.zhaopin.zpm:selectwidget:4.0.34'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
