--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,21 +59,21 @@ dependencies {
 
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'androidx.recyclerview:recyclerview:1.3.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.1"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
     implementation "androidx.activity:activity-ktx:1.5.1"
     implementation 'androidx.work:work-runtime:2.5.0'
-    implementation 'androidx.paging:paging-runtime-ktx:3.1.0-beta01'
+    implementation 'androidx.paging:paging-runtime-ktx:3.1.1'
     implementation 'androidx.startup:startup-runtime:1.1.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     implementation 'androidx.room:room-runtime:2.4.2'
     kapt "androidx.room:room-compiler:2.4.2"
 
-    implementation 'com.google.code.gson:gson:2.10'
+    implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'com.google.android.material:material:1.9.0'
 
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
@@ -87,8 +87,7 @@ dependencies {
     implementation 'com.zhaopin.zpm:module_common_widget:1.3.40'
     implementation 'com.zhaopin.zpm:module_common_util:1.1.45'
     implementation 'com.zhaopin.zpm:module_list:1.2.2'
-    implementation 'com.zhaopin.zpm:module_mvvm_base:2.1.8'
-    implementation 'com.zhaopin.zpm:selectwidget:4.0.34'
+    implementation 'com.zhaopin.zpm:selectwidget:4.0.44'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
