--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,6 +82,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.14.2'
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
     implementation 'com.airbnb.android:lottie:5.2.0'
+    implementation 'com.google.android.flexbox:flexbox:3.0.0'
 
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.zhaopin.zpm:module_common_widget:1.3.40'
