--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,7 @@
         <activity android:name=".task.appbar.AppBarActivity"/>
         <activity android:name=".activity.linkage.LinkageActivity"/>
         <activity android:name=".study.mvi.MviSampleActivity"/>
+        <activity android:name=".task.microenterprises.view.home.MicroResumeHomeFragment"/>
 
         <!-- 定义Startup Provider参数 -->
         <provider
