--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,7 @@
         <activity android:name=".task.jobtag.card.RecommendJobActivity"/>
         <activity android:name=".task.search.PositionSearchBridgeActivity"/>
         <activity android:name=".task.searchresult.PositionSearchResultActivity"/>
+        <activity android:name=".compose.ComposeActivity"/>
 
         <!-- 定义Startup Provider参数 -->
         <provider
