--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,9 +37,14 @@ android {
         jvmTarget = '1.8'
     }
 
+    composeOptions {
+        kotlinCompilerExtensionVersion compose_compiler_version
+    }
+
     buildFeatures {
         dataBinding true
         viewBinding true
+        compose = true
     }
 
     packagingOptions {
@@ -90,6 +95,17 @@ dependencies {
     implementation 'com.zhaopin.zpm:module_common_util:1.1.45'
     implementation 'com.zhaopin.zpm:module_list:1.2.2'
     implementation 'com.zhaopin.zpm:selectwidget:4.2.4'
+
+    /** compose by target version */
+    implementation "androidx.compose.ui:ui:$compose_version"
+    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
+    implementation "androidx.compose.animation:animation:$compose_version"
+    implementation "androidx.compose.foundation:foundation:$compose_version"
+    implementation "androidx.compose.material:material:$compose_version"
+    /** androidx组件 compose版 */
+    implementation 'androidx.activity:activity-compose:1.6.1'
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1"
+    implementation "io.coil-kt:coil-compose:2.2.2"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
