--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,11 @@
 
 buildscript {
     ext {
-        kotlin_version = '1.6.10'
-        compose_version = '1.1.1'
+        kotlin_version = '1.8.10'
+        compose_version = '1.4.3'
         coroutines_version = '1.6.4'
         accompanist_version = '0.23.1'
+        compose_compiler_version = "1.4.3"
     }
     repositories {
         google()
