--- a/app/build.gradle
+++ b/app/build.gradle
@@ -106,6 +106,11 @@ dependencies {
     implementation 'androidx.activity:activity-compose:1.6.1'
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1"
     implementation "io.coil-kt:coil-compose:2.2.2"
+    /** compose accompanist */
+    implementation "com.google.accompanist:accompanist-systemuicontroller:$accompanist_version"
+    implementation "com.google.accompanist:accompanist-swiperefresh:$accompanist_version"
+    /** 三方库 compose版 */
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
