--- a/app/build.gradle
+++ b/app/build.gradle
@@ -106,11 +106,18 @@ dependencies {
     implementation 'androidx.activity:activity-compose:1.6.1'
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1"
     implementation "io.coil-kt:coil-compose:2.2.2"
+    implementation "androidx.paging:paging-compose:3.2.0"
     /** compose accompanist */
     implementation "com.google.accompanist:accompanist-systemuicontroller:$accompanist_version"
     implementation "com.google.accompanist:accompanist-swiperefresh:$accompanist_version"
     /** 三方库 compose版 */
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
+    implementation "com.airbnb.android:lottie-compose:6.0.0"
+
+    /** 刷新库 */
+    implementation "io.github.loren-moon:composesmartrefresh:1.2.1"
+//    implementation "com.github.jenly1314.UltraSwipeRefresh:refresh:1.0.0"
+    implementation 'io.github.shenzhen2017:compose-refreshlayout:1.0.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
