--- a/config.gradle
+++ b/config.gradle
@@ -33,13 +33,12 @@ android {
                              "room.expandProjection": "true"]
             }
         }
-        consumerProguardFiles 'consumer-rules.pro'
         resConfigs("en", "zh", "zh-rCN")
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
 
     sourceSets {
