--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,12 +90,14 @@ dependencies {
     implementation 'com.airbnb.android:lottie:5.2.0'
     implementation 'com.google.android.flexbox:flexbox:3.0.0'
     implementation 'net.yslibrary.keyboardvisibilityevent:keyboardvisibilityevent:3.0.0-RC3'
+    implementation 'com.ethanhua:skeleton:1.1.2'
 
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.zhaopin.zpm:module_common_widget:1.4.6'
     implementation 'com.zhaopin.zpm:module_common_util:1.1.45'
     implementation 'com.zhaopin.zpm:module_list:1.2.2'
     implementation 'com.zhaopin.zpm:selectwidget:4.2.4'
+    implementation 'com.zhaopin.zpm:shimmerlayout:2.1.3@aar'
 
     /** compose by target version */
     implementation "androidx.compose.ui:ui:$compose_version"
