--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,7 @@
         <activity android:name=".task.searchresult.PositionSearchResultActivity"/>
         <activity android:name=".compose.ComposeActivity"/>
         <activity android:name=".compose.CollectActivity"/>
+        <activity android:name=".compose.WechatSendActivity"/>
         <activity android:name=".task.jobdetail.JobDetailActivity"/>
         <activity android:name=".task.ai.AiRecommendActivity"/>
         <activity android:name=".task.resume.ResumeRecommendActivity"/>
