--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ plugins {
 apply from: "../config.gradle"
 
 android {
-    compileSdkVersion 33
+    compileSdkVersion 34
     buildToolsVersion "33.0.1"
     defaultConfig {
         applicationId "com.example.kotlindemo"
@@ -101,11 +101,14 @@ dependencies {
     implementation 'com.zhaopin.zpm:shimmerlayout:2.1.3@aar'
 
     /** compose by target version */
-    implementation "androidx.compose.ui:ui:$compose_version"
-    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation "androidx.compose.animation:animation:$compose_version"
-    implementation "androidx.compose.foundation:foundation:$compose_version"
-    implementation "androidx.compose.material:material:$compose_version"
+    def composeBom = platform('androidx.compose:compose-bom:2024.05.00')
+    implementation composeBom
+
+    implementation "androidx.compose.ui:ui"
+    implementation "androidx.compose.ui:ui-tooling-preview"
+    implementation "androidx.compose.animation:animation"
+    implementation "androidx.compose.foundation:foundation"
+    implementation "androidx.compose.material:material"
     /** androidx组件 compose版 */
     implementation 'androidx.activity:activity-compose:1.6.1'
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1"
