--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,7 @@
         <activity android:name=".task.appbar.AppBarActivity"/>
         <activity android:name=".task.linkage.LinkageActivity"/>
         <activity android:name=".study.mvi.MviSampleActivity"/>
+        <activity android:name=".compose.PageStateActivity"/>
         <activity android:name=".task.microenterprises.view.home.MicroResumeHomeFragment"/>
         <activity android:name=".task.jobtag.card.RecommendJobActivity"/>
         <activity android:name=".task.search.PositionSearchBridgeActivity"/>
