--- a/app/build.gradle
+++ b/app/build.gradle
@@ -105,6 +105,7 @@ dependencies {
     implementation composeBom
 
     implementation "androidx.compose.ui:ui"
+    debugImplementation "androidx.compose.ui:ui-tooling"
     implementation "androidx.compose.ui:ui-tooling-preview"
     implementation "androidx.compose.animation:animation"
     implementation "androidx.compose.foundation:foundation"
