--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,6 +54,9 @@
         <activity android:name=".task.ai.AiRecommendActivity"/>
         <activity android:name=".task.resume.ResumeRecommendActivity"/>
         <activity android:name=".task.blueedit.activity.BlueResumeEditActivity"/>
+        <activity android:name=".task.login.LoginAuthActivity"/>
+        <activity android:name=".task.login.LoginMailAuthActivity"/>
+        <activity android:name=".task.login.LoginCheckBindPhoneActivity"/>
 
         <!-- 定义Startup Provider参数 -->
         <provider
