--- a/gradle.properties
+++ b/gradle.properties
@@ -23,3 +23,4 @@ android.injected.testOnly=false
 android.defaults.buildfeatures.buildconfig=true
 android.nonTransitiveRClass=false
 android.nonFinalResIds=false
+android.suppressUnsupportedCompileSdk=34
