--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,6 +92,7 @@ dependencies {
     implementation 'com.google.android.flexbox:flexbox:3.0.0'
     implementation 'net.yslibrary.keyboardvisibilityevent:keyboardvisibilityevent:3.0.0-RC3'
     implementation 'com.ethanhua:skeleton:1.1.2'
+    implementation 'jp.wasabeef:recyclerview-animators:4.0.2'
 
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.zhaopin.zpm:module_common_widget:1.4.6'
