--- a/app/build.gradle
+++ b/app/build.gradle
@@ -100,6 +100,7 @@ dependencies {
     implementation 'com.zhaopin.zpm:module_list:1.2.2'
     implementation 'com.zhaopin.zpm:selectwidget:4.3.18'
     implementation 'com.zhaopin.zpm:shimmerlayout:2.1.3@aar'
+    implementation "com.zhaopin.zpm:module_list_expose:1.0.1"
 
     /** compose by target version */
     def composeBom = platform('androidx.compose:compose-bom:2024.05.00')
