feat: Compsoe分页库列表状态通用Item封装

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,6 +95,7 @@ dependencies {
     implementation 'jp.wasabeef:recyclerview-animators:4.0.2'
 //    implementation 'com.github.zhpanvip:viewpagerindicator:1.2.3'
     implementation 'com.github.zhpanvip:bannerviewpager:3.5.12'
+    implementation "com.github.ChinaLike:TagTextView:0.2.7"
 
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.zhaopin.zpm:module_common_widget:1.5.8'
