--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,7 @@ dependencies {
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     implementation 'androidx.room:room-runtime:2.4.2'
     kapt "androidx.room:room-compiler:2.4.2"
+    implementation 'androidx.work:work-runtime:2.8.1'
 
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'com.google.android.material:material:1.9.0'
